[package]
name = "logfix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
similar = "2.7.0"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
